force-app/main/default/objects/InvoiceDebtSummary__c/InvoiceDebtSummary__c.object-meta.xml
<CustomObject>
    <label>Invoice Debt Summary</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>RowNum</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Invoice Debts Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>