force-app/main/default/objects/InvoiceDebtSummary__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Invoice Debts Summary</relationshipLabel>
    <relationshipName>Invoice_Debts_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>