force-app/main/default/objects/InvoiceDebtSummary__c/fields/CompositeKey__c.field-meta.xml
<CustomField>
    <fullName>CompositeKey__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>CompositeKey</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>