force-app/main/default/objects/InvoiceDebtSummary__c/fields/DebtType__c.field-meta.xml
<CustomField>
    <fullName>DebtType__c</fullName>
    <label>Debt Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Total Debt</fullName>
            </value>
            <value>
                <fullName>Overdue Debt</fullName>
                <label>Including Overdue Debt</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>