force-app/main/default/objects/InvoiceDebtSummary__c/fields/PortalUser__c.field-meta.xml
<CustomField>
    <fullName>PortalUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Portal User</label>
    <referenceTo>PortalUser__c</referenceTo>
    <relationshipLabel>Invoice Debts Summary</relationshipLabel>
    <relationshipName>Invoice_Debts_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>