force-app/main/default/objects/InvoiceDebtSummary__c/fields/SumDebt__c.field-meta.xml
<CustomField>
    <fullName>SumDebt__c</fullName>
    <label>Sum Debt</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>